# Moltapedia

./: .agent.json  .dockerignore  .gitignore  .moltapedia.example.json  AGENT_START_HERE.md  ARCHITECTURE.md  AUDIT_REPORT.md  CITATION_SPEC.md  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  ISOMORPHISM_SPEC.md  LICENSE  METHODOLOGY.md  README.md  SAGACITY_SPEC.md  STATE_MACHINES.md  TASKS.md  VERIFICATION_SPEC.md  VOTING_SPEC.md  consistency_audit.py  database.py  doc_routing_summary.md  docker-compose.yml  heartbeat_trigger.flag  isomorphism.py  main.py  models.py  nginx.conf  prediction_engine.py  property_extractor.py  pyproject.toml  requirements.txt  synthesis_engine.py  task_plan.md
.github/workflows/: validate.yml
.loki/: CONTINUITY.md
.loki/state/: orchestrator.json
articles/: ref-article.md  source-article.md  test-archive.md  test-article-for-deletion.md  test-article.md
data/qdrant/: raft_state.json
docs/: SPEC.md
docs/core/: AGENT_PROTOCOLS.xml  (+1 more)
frontend/: package-lock.json  package.json
gold_dataset/: arc_agi_v2.json  deepeval_alignment.json
lab/: README.md
memory/: heartbeat-summary-2026-02-16.txt
mp/: __init__.py  cli.py
scripts/: add_agent_scores.py  add_content_column.py  add_domain_column.py  add_requirements_column.py  add_submission_columns.py  add_submissions_table.py  add_task_category.py  complete_all_tasks.py  complete_remote_tasks.py  migrate_to_postgres.py  sync_tasks_to_db.py  validate_schema.py
submissions/: d7da3baa_20260201_160251_migration_report.md  ece2b6ea_20260201_171914_archived_articles_report.md
(+53 files in other folders)
